Fixed comment content being put onto next line on mobile screens

--- a/assets/styles/question.scss
+++ b/assets/styles/question.scss
@@ -48,6 +48,7 @@
         .content {
             display: inline-block;
             vertical-align: top;
+            max-width: 90%;
         }
     }
 
